# phantom-strike-workflows

./: .env.example  .gitignore  pyproject.toml  run_worker.py  worker.py
.github/workflows/: workflows-ci.yml
activities/: __init__.py  core_updates.py  evidence.py
app/: __init__.py  bootstrap.py
clients/: __init__.py  core_client.py
config/: __init__.py  settings.py
docs/: local-validation.md  smoke.md
models/: __init__.py  contracts.py  decision.py  signal.py
observability/: __init__.py
scripts/: __init__.py  run_local_validation.sh  smoke_workflow_core_handoff.py
tests/: test_settings.py  test_workflow_regressions.py
tests/fixtures/: smoke_signal_input.json
workflows/: __init__.py  signal_validation.py
