[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-strike-workflows"
version = "0.1.0"
description = "Temporal workflows for PhantomStrike decision loops."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "temporalio>=1.7,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*", "activities*", "clients*", "config*", "models*", "observability*", "workflows*"]
